# governance

./: .gitignore  .taplo.toml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: validate-team.sh
.github/workflows/: check.yml  deploy-infra.yml  sync.yml  validate-pr.yml  validate.yml
docs/adrs/: 0003-define-team-schema.md  0004-standardize-on-members-and-leads-terminology.md
docs/schemas/: member.md
infra/: .terraform.lock.hcl  admins.json  backend.tf  inputs.json  locals.tf  main.tf  tf.json  variables.tf
infra/github/: main.tf
infra/keycloak/: authflows.tf  idp.tf  inputs.tf  ldap.tf  leadership.tf  main.tf  openbao.tf  outputs.tf  providers.tf  teams.tf  user_profile.tf
infra/secrets/: .terraform.lock.hcl  inputs.tf  leadership.tf  main.tf  oidc.tf  providers.tf  variables.tf
meta/clients/: keycloak_client.py
meta/linter/: __init__.py
meta/loaders/: __init__.py  key_ordering.py  members.py  teams.py  types.py
meta/logger/: __init__.py  _app_logger.py  _config.py  _constants.py  _utils.py
meta/models/: _member.py  _team.py
meta/schemas/: README.md  contributor.schema.json  team.schema.json
meta/synchronizers/: codeowners.py
meta/synchronizers/github/: _issue_types.py  _populator.py
meta/tests/: test_members.py  test_teams.py
meta/validator/: README.md  common.py  key_ordering.py  main.py  model.py  reporter.py
meta/validator/contributors/: __init__.py  checks.py  loader.py  run.py  validator.py
meta/validator/members/: loader.py  (+1 more)
meta/validators/: __init__.py  main.py
teams/: governance.toml  leadership.toml
(+18 files in other folders)
