[project]
name = "governance"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta/validators"]
include = ["meta/*"]

[project.scripts]
validate = "validators:main"

# [tool.ruff]
# lint.select = ["ALL"]

# [tool.mypy]
# strict = true
